--- a/environment.yml
+++ b/environment.yml
@@ -39,8 +39,11 @@ dependencies:
   - icu=69.1=hbdafb3b_0
   - idna=3.3=pyhd8ed1ab_0
   - importlib-metadata=4.11.3=py38h10201cd_0
+  - importlib_resources=5.6.0=pyhd8ed1ab_0
   - joblib=1.1.0=pyhd8ed1ab_0
   - jpeg=9e=h3422bc3_0
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter_core=4.9.2=py38h10201cd_0
   - keras-preprocessing=1.1.2=pyhd8ed1ab_0
   - krb5=1.19.3=hf9b2bbe_0
   - libblas=3.9.0=13_osxarm64_openblas
@@ -66,6 +69,7 @@ dependencies:
   - lxml=4.8.0=py38hd4105a3_0
   - markdown=3.3.6=pyhd8ed1ab_0
   - multidict=6.0.2=py38hea4295b_0
+  - nbformat=5.2.0=pyhd8ed1ab_0
   - ncurses=6.3=hc470f4d_0
   - numpy=1.19.5=py38hbf7bb01_2
   - oauthlib=3.2.0=pyhd8ed1ab_0
@@ -79,6 +83,7 @@ dependencies:
   - pycparser=2.21=pyhd8ed1ab_0
   - pyjwt=2.3.0=pyhd8ed1ab_1
   - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyrsistent=0.18.1=py38hea4295b_0
   - pysocks=1.7.1=py38h10201cd_4
   - python=3.8.13=h7e095e3_0_cpython
   - python-flatbuffers=2.0=pyhd8ed1ab_0
@@ -110,6 +115,7 @@ dependencies:
   - threadpoolctl=3.1.0=pyh8a188c0_0
   - tk=8.6.12=he1e0b03_0
   - tqdm=4.63.1=pyhd8ed1ab_0
+  - traitlets=5.1.1=pyhd8ed1ab_0
   - typing_extensions=4.1.1=pyha770c72_0
   - urllib3=1.26.9=pyhd8ed1ab_0
   - werkzeug=2.0.3=pyhd8ed1ab_1
@@ -174,7 +180,6 @@ dependencies:
     - tensor==0.3.6
     - tomli==2.0.0
     - tornado==6.1
-    - traitlets==5.1.1
     - twisted==22.2.0
     - typing-extensions==4.0.1
     - wcwidth==0.2.5
