--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,8 @@ dependencies:
   - attrs=21.4.0=pyhd8ed1ab_0
   - beautifulsoup4=4.10.0=pyha770c72_0
   - blinker=1.4=py_1
+  - brotli=1.0.9=h3422bc3_6
+  - brotli-bin=1.0.9=h3422bc3_6
   - brotlipy=0.7.0=py38hea4295b_1003
   - bzip2=1.0.8=h3422bc3_4
   - c-ares=1.18.1=h3422bc3_0
@@ -22,9 +24,13 @@ dependencies:
   - certifi=2021.10.8=py38h10201cd_1
   - cffi=1.15.0=py38hc67bbb8_0
   - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - chart-studio=1.1.0=pyh9f0ad1d_0
   - colorama=0.4.4=pyh9f0ad1d_0
   - conda-package-handling=1.8.0=py38h33210d7_0
   - cryptography=36.0.0=py38h834c97f_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - fonttools=4.31.2=py38h33210d7_0
+  - freetype=2.10.4=h17b34a0_1
   - frozenlist=1.3.0=py38hea4295b_0
   - gast=0.4.0=pyh9f0ad1d_0
   - giflib=5.2.1=h27ca646_2
@@ -40,16 +46,24 @@ dependencies:
   - idna=3.3=pyhd8ed1ab_0
   - importlib-metadata=4.11.3=py38h10201cd_0
   - importlib_resources=5.6.0=pyhd8ed1ab_0
+  - jbig=2.1=h3422bc3_2003
   - joblib=1.1.0=pyhd8ed1ab_0
   - jpeg=9e=h3422bc3_0
   - jsonschema=4.4.0=pyhd8ed1ab_0
   - jupyter_core=4.9.2=py38h10201cd_0
   - keras-preprocessing=1.1.2=pyhd8ed1ab_0
+  - kiwisolver=1.4.0=py38h0f71543_0
   - krb5=1.19.3=hf9b2bbe_0
+  - lcms2=2.12=had6a04f_0
+  - lerc=3.0=hbdafb3b_0
   - libblas=3.9.0=13_osxarm64_openblas
+  - libbrotlicommon=1.0.9=h3422bc3_6
+  - libbrotlidec=1.0.9=h3422bc3_6
+  - libbrotlienc=1.0.9=h3422bc3_6
   - libcblas=3.9.0=13_osxarm64_openblas
   - libcurl=7.82.0=hb0e6552_0
   - libcxx=13.0.1=h6a5c8ee_0
+  - libdeflate=1.10=h3422bc3_0
   - libedit=3.1.20191231=hc8eb9b7_2
   - libev=4.33=h642e427_1
   - libffi=3.4.2=h3422bc3_5
@@ -62,38 +76,54 @@ dependencies:
   - libpng=1.6.37=hf7e6567_2
   - libprotobuf=3.19.4=hccf11d3_0
   - libssh2=1.10.0=hb80f160_2
+  - libtiff=4.3.0=h77dc3b6_3
+  - libwebp=1.2.2=h0d20362_0
+  - libwebp-base=1.2.2=h3422bc3_1
+  - libxcb=1.13=h9b22ae9_1004
   - libxml2=2.9.12=hedbfbf4_1
   - libxslt=1.1.33=hecd09c7_3
   - libzlib=1.2.11=hee7b306_1013
   - llvm-openmp=13.0.1=h455960f_1
   - lxml=4.8.0=py38hd4105a3_0
+  - lz4-c=1.9.3=hbdafb3b_1
   - markdown=3.3.6=pyhd8ed1ab_0
+  - matplotlib-base=3.5.1=py38hb140015_0
+  - mplfinance=0.12.8b9=pyhd8ed1ab_0
   - multidict=6.0.2=py38hea4295b_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - nbformat=5.2.0=pyhd8ed1ab_0
   - ncurses=6.3=hc470f4d_0
   - numpy=1.19.5=py38hbf7bb01_2
   - oauthlib=3.2.0=pyhd8ed1ab_0
+  - openjpeg=2.4.0=h062765e_1
   - openssl=1.1.1n=h90dfc92_0
   - opt_einsum=3.3.0=pyhd8ed1ab_1
+  - packaging=21.3=pyhd8ed1ab_0
+  - pillow=9.0.1=py38h7ff1586_2
   - pip=22.0.4=pyhd8ed1ab_0
   - plotly=5.6.0=pyhd8ed1ab_0
+  - pthread-stubs=0.4=h27ca646_1001
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycosat=0.6.3=py38hea4295b_1009
   - pycparser=2.21=pyhd8ed1ab_0
   - pyjwt=2.3.0=pyhd8ed1ab_1
   - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
   - pyrsistent=0.18.1=py38hea4295b_0
   - pysocks=1.7.1=py38h10201cd_4
   - python=3.8.13=h7e095e3_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-flatbuffers=2.0=pyhd8ed1ab_0
   - python.app=1.4=py38h561f5be_0
   - python_abi=3.8=2_cp38
+  - pytz=2022.1=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
   - re2=2021.11.01=hbdafb3b_0
   - readline=8.1=hedafd6a_0
   - requests=2.27.1=pyhd8ed1ab_0
   - requests-oauthlib=1.3.1=pyhd8ed1ab_0
+  - retrying=1.3.3=py_2
   - rsa=4.8=pyhd8ed1ab_0
   - ruamel_yaml=0.15.80=py38hea4295b_1006
   - scikit-learn=1.0.2=py38h2cd4032_0
@@ -117,15 +147,19 @@ dependencies:
   - tqdm=4.63.1=pyhd8ed1ab_0
   - traitlets=5.1.1=pyhd8ed1ab_0
   - typing_extensions=4.1.1=pyha770c72_0
+  - unicodedata2=14.0.0=py38hea4295b_0
   - urllib3=1.26.9=pyhd8ed1ab_0
   - werkzeug=2.0.3=pyhd8ed1ab_1
   - wheel=0.37.1=pyhd8ed1ab_0
   - wrapt=1.14.0=py38h33210d7_0
+  - xorg-libxau=1.0.9=h27ca646_0
+  - xorg-libxdmcp=1.1.3=h27ca646_0
   - xz=5.2.5=h642e427_1
   - yaml=0.2.5=h3422bc3_2
   - yarl=1.7.2=py38hea4295b_1
   - zipp=3.7.0=pyhd8ed1ab_1
   - zlib=1.2.11=hee7b306_1013
+  - zstd=1.5.2=h861e0a7_0
   - pip:
     - appnope==0.1.2
     - asttokens==2.0.5
@@ -136,12 +170,10 @@ dependencies:
     - click==8.0.3
     - constantly==15.1.0
     - construct==2.10.68
-    - cycler==0.11.0
     - debugpy==1.5.1
     - decorator==5.1.1
     - entrypoints==0.3
     - executing==0.8.2
-    - fonttools==4.31.2
     - hyperlink==21.0.0
     - incremental==21.3.0
     - ipykernel==6.7.0
@@ -150,8 +182,6 @@ dependencies:
     - jupyter-client==7.1.2
     - jupyter-core==4.9.1
     - keras==2.8.0
-    - kiwisolver==1.4.0
-    - matplotlib==3.5.1
     - matplotlib-inline==0.1.3
     - mypy-extensions==0.4.3
     - nest-asyncio==1.5.4
@@ -161,7 +191,6 @@ dependencies:
     - pathspec==0.9.0
     - pexpect==4.8.0
     - pickleshare==0.7.5
-    - pillow==9.0.1
     - platformdirs==2.4.1
     - ply==3.11
     - prompt-toolkit==3.0.26
@@ -172,8 +201,6 @@ dependencies:
     - pygments==2.11.2
     - pysmi==0.3.4
     - pysnmp==4.4.12
-    - python-dateutil==2.8.2
-    - pytz==2022.1
     - pyzmq==22.3.0
     - sklearn==0.0
     - stack-data==0.1.4
