--- a/environment.yml
+++ b/environment.yml
@@ -7,10 +7,18 @@ dependencies:
   - absl-py=1.0.0=pyhd8ed1ab_0
   - aiohttp=3.8.1=py38hea4295b_0
   - aiosignal=1.2.0=pyhd8ed1ab_0
+  - appnope=0.1.2=py38h10201cd_2
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py38hea4295b_1
+  - asttokens=2.0.5=pyhd8ed1ab_0
   - astunparse=1.6.3=pyhd8ed1ab_0
   - async-timeout=4.0.2=pyhd8ed1ab_0
   - attrs=21.4.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - beautifulsoup4=4.10.0=pyha770c72_0
+  - bleach=4.1.0=pyhd8ed1ab_0
   - blinker=1.4=py_1
   - brotli=1.0.9=h3422bc3_6
   - brotli-bin=1.0.9=h3422bc3_6
@@ -21,14 +29,20 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - cachetools=4.2.4=pyhd8ed1ab_0
-  - certifi=2021.10.8=py38h10201cd_1
+  - certifi=2021.10.8=py38h10201cd_2
   - cffi=1.15.0=py38hc67bbb8_0
   - charset-normalizer=2.0.12=pyhd8ed1ab_0
   - chart-studio=1.1.0=pyh9f0ad1d_0
   - colorama=0.4.4=pyh9f0ad1d_0
+  - colorlover=0.3.0=py_0
   - conda-package-handling=1.8.0=py38h33210d7_0
   - cryptography=36.0.0=py38h834c97f_0
+  - cufflinks-py=0.17.3=py_0
   - cycler=0.11.0=pyhd8ed1ab_0
+  - debugpy=1.5.1=py38h6f2b01f_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - flit-core=3.7.1=pyhd8ed1ab_0
   - fonttools=4.31.2=py38h33210d7_0
   - freetype=2.10.4=h17b34a0_1
   - frozenlist=1.3.0=py38hea4295b_0
@@ -46,11 +60,20 @@ dependencies:
   - idna=3.3=pyhd8ed1ab_0
   - importlib-metadata=4.11.3=py38h10201cd_0
   - importlib_resources=5.6.0=pyhd8ed1ab_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.7.0=pyhd8ed1ab_0
   - jbig=2.1=h3422bc3_2003
+  - jedi=0.18.1=py38h10201cd_0
+  - jinja2=3.1.1=pyhd8ed1ab_0
   - joblib=1.1.0=pyhd8ed1ab_0
   - jpeg=9e=h3422bc3_0
   - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter=1.0.0=py38h10201cd_7
+  - jupyter_client=7.2.0=pyhd8ed1ab_0
+  - jupyter_console=6.4.3=pyhd8ed1ab_0
   - jupyter_core=4.9.2=py38h10201cd_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_widgets=1.1.0=pyhd8ed1ab_0
   - keras-preprocessing=1.1.2=pyhd8ed1ab_0
   - kiwisolver=1.4.0=py38h0f71543_0
   - krb5=1.19.3=hf9b2bbe_0
@@ -75,6 +98,7 @@ dependencies:
   - libopenblas=0.3.18=openmp_h5dd58f0_0
   - libpng=1.6.37=hf7e6567_2
   - libprotobuf=3.19.4=hccf11d3_0
+  - libsodium=1.0.18=h27ca646_1
   - libssh2=1.10.0=hb80f160_2
   - libtiff=4.3.0=h77dc3b6_3
   - libwebp=1.2.2=h0d20362_0
@@ -87,38 +111,63 @@ dependencies:
   - lxml=4.8.0=py38hd4105a3_0
   - lz4-c=1.9.3=hbdafb3b_1
   - markdown=3.3.6=pyhd8ed1ab_0
+  - markupsafe=2.1.1=py38h33210d7_0
   - matplotlib-base=3.5.1=py38hb140015_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py38hea4295b_1005
   - mplfinance=0.12.8b9=pyhd8ed1ab_0
   - multidict=6.0.2=py38hea4295b_0
+  - multitasking=0.0.9=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
+  - nbclient=0.5.13=pyhd8ed1ab_0
+  - nbconvert=6.4.5=pyhd8ed1ab_1
+  - nbconvert-core=6.4.5=pyhd8ed1ab_1
+  - nbconvert-pandoc=6.4.5=pyhd8ed1ab_1
   - nbformat=5.2.0=pyhd8ed1ab_0
   - ncurses=6.3=hc470f4d_0
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - notebook=6.4.10=pyha770c72_0
   - numpy=1.19.5=py38hbf7bb01_2
   - oauthlib=3.2.0=pyhd8ed1ab_0
   - openjpeg=2.4.0=h062765e_1
   - openssl=1.1.1n=h90dfc92_0
   - opt_einsum=3.3.0=pyhd8ed1ab_1
   - packaging=21.3=pyhd8ed1ab_0
+  - pandoc=2.12=hca03da5_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - patsy=0.5.2=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
   - pillow=9.0.1=py38h7ff1586_2
   - pip=22.0.4=pyhd8ed1ab_0
   - plotly=5.6.0=pyhd8ed1ab_0
+  - prometheus_client=0.13.1=pyhd8ed1ab_0
+  - prompt_toolkit=3.0.27=hd8ed1ab_0
+  - psutil=5.9.0=py38hea4295b_0
   - pthread-stubs=0.4=h27ca646_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycosat=0.6.3=py38hea4295b_1009
   - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.11.2=pyhd8ed1ab_0
   - pyjwt=2.3.0=pyhd8ed1ab_1
   - pyopenssl=22.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.7=pyhd8ed1ab_0
   - pyrsistent=0.18.1=py38hea4295b_0
   - pysocks=1.7.1=py38h10201cd_4
   - python=3.8.13=h7e095e3_0_cpython
+  - python-cufflinks=0.17.3=py_0
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-flatbuffers=2.0=pyhd8ed1ab_0
   - python.app=1.4=py38h561f5be_0
   - python_abi=3.8=2_cp38
   - pytz=2022.1=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyyaml=6.0=py38h33210d7_4
+  - pyzmq=22.3.0=py38h51b17a6_1
   - re2=2021.11.01=hbdafb3b_0
   - readline=8.1=hedafd6a_0
   - requests=2.27.1=pyhd8ed1ab_0
@@ -128,12 +177,17 @@ dependencies:
   - ruamel_yaml=0.15.80=py38hea4295b_1006
   - scikit-learn=1.0.2=py38h2cd4032_0
   - scipy=1.8.0=py38hd0c9ec0_1
+  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn-base=0.11.2=pyhd8ed1ab_0
+  - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=60.10.0=py38h10201cd_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.8=hc88da5d_3
   - soupsieve=2.3.1=pyhd8ed1ab_0
   - sqlalchemy=1.4.32=py38h33210d7_0
   - sqlite=3.37.1=h7e3ccbd_0
+  - stack_data=0.2.0=pyhd8ed1ab_0
+  - statsmodels=0.13.2=py38h691f20f_0
   - tenacity=8.0.1=pyhd8ed1ab_0
   - tensorboard=2.6.0=pyhd8ed1ab_1
   - tensorboard-data-server=0.6.0=py38h10d4710_1
@@ -142,73 +196,64 @@ dependencies:
   - tensorflow-base=2.7.0=cpu_py38h93cb87e_0
   - tensorflow-estimator=2.7.0=cpu_py38h4dea37b_0
   - termcolor=1.1.0=py_2
+  - terminado=0.13.3=py38h10201cd_0
+  - testpath=0.6.0=pyhd8ed1ab_0
   - threadpoolctl=3.1.0=pyh8a188c0_0
   - tk=8.6.12=he1e0b03_0
+  - tornado=6.1=py38hea4295b_2
   - tqdm=4.63.1=pyhd8ed1ab_0
   - traitlets=5.1.1=pyhd8ed1ab_0
   - typing_extensions=4.1.1=pyha770c72_0
   - unicodedata2=14.0.0=py38hea4295b_0
   - urllib3=1.26.9=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
   - werkzeug=2.0.3=pyhd8ed1ab_1
   - wheel=0.37.1=pyhd8ed1ab_0
+  - widgetsnbextension=3.6.0=py38h10201cd_0
   - wrapt=1.14.0=py38h33210d7_0
   - xorg-libxau=1.0.9=h27ca646_0
   - xorg-libxdmcp=1.1.3=h27ca646_0
   - xz=5.2.5=h642e427_1
   - yaml=0.2.5=h3422bc3_2
   - yarl=1.7.2=py38hea4295b_1
+  - yfinance=0.1.70=pyhd8ed1ab_0
+  - zeromq=4.3.4=hbdafb3b_1
   - zipp=3.7.0=pyhd8ed1ab_1
   - zlib=1.2.11=hee7b306_1013
   - zstd=1.5.2=h861e0a7_0
   - pip:
-    - appnope==0.1.2
-    - asttokens==2.0.5
     - automat==20.2.0
-    - backcall==0.2.0
     - black==22.1.0
     - bs4==0.0.1
     - click==8.0.3
     - constantly==15.1.0
     - construct==2.10.68
-    - debugpy==1.5.1
-    - decorator==5.1.1
     - entrypoints==0.3
     - executing==0.8.2
     - hyperlink==21.0.0
     - incremental==21.3.0
     - ipykernel==6.7.0
     - ipython==8.0.1
-    - jedi==0.18.1
     - jupyter-client==7.1.2
     - jupyter-core==4.9.1
     - keras==2.8.0
-    - matplotlib-inline==0.1.3
     - mypy-extensions==0.4.3
-    - nest-asyncio==1.5.4
     - pandas==1.4.1
     - pandas-datareader==0.10.0
-    - parso==0.8.3
     - pathspec==0.9.0
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
     - platformdirs==2.4.1
     - ply==3.11
     - prompt-toolkit==3.0.26
     - protobuf==3.19.4
-    - ptyprocess==0.7.0
-    - pure-eval==0.2.2
     - pycryptodomex==3.14.1
-    - pygments==2.11.2
     - pysmi==0.3.4
     - pysnmp==4.4.12
-    - pyzmq==22.3.0
     - sklearn==0.0
     - stack-data==0.1.4
     - tensor==0.3.6
     - tomli==2.0.0
-    - tornado==6.1
     - twisted==22.2.0
     - typing-extensions==4.0.1
-    - wcwidth==0.2.5
     - zope-interface==5.4.0
 prefix: /opt/homebrew/Caskroom/miniconda/base/envs/trading_env
